<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/padding_xlarge">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gCenterX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:src="@drawable/squadapp_icon"
        android:contentDescription="@string/cd_app_logo"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="@id/gTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xxlarge"
        android:letterSpacing="@dimen/letter_spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/ivAppLogo"
        app:layout_constraintEnd_toStartOf="@id/gCenterX"/>

    <TextView
        android:id="@+id/tvTitleAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_squad"
        android:textColor="@color/neon_purple"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xxlarge"
        android:letterSpacing="@dimen/letter_spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@id/ivAppLogo"
        app:layout_constraintStart_toStartOf="@id/gCenterX"/>


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/titleBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvTitle,tvTitleAccent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.App.LoginTextInputLayout"
        android:theme="@style/MyTextInputThemeOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_xlarge"
        app:boxBackgroundMode="outline"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/login_icon_tint"
        app:layout_constraintTop_toBottomOf="@id/titleBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/login_hint"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.App.LoginTextInputLayout"
        android:theme="@style/MyTextInputThemeOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:boxBackgroundMode="outline"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/login_icon_tint"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/login_icon_tint"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/login_hint"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:id="@+id/wrapLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:padding="@dimen/padding_small"
        android:background="@drawable/bg_btn_outer_glow_primary"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:text="@string/btn_sign_in"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:backgroundTint="@null"
            android:background="@drawable/bg_btn_body_primary"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/wrapGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_colossal"
        android:padding="@dimen/padding_small"
        android:background="@drawable/bg_btn_outer_glow_primary"
        app:layout_constraintTop_toBottomOf="@id/wrapLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvFooter">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:text="@string/btn_continue_google"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:backgroundTint="@null"
            android:background="@drawable/bg_btn_body_primary"/>
    </FrameLayout>


    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_footer"
        android:textColor="@color/white_70"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintTop_toBottomOf="@id/wrapGoogle"
        app:layout_constraintBottom_toBottomOf="@id/gBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvCreateAccount"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_create_account"
        android:textColor="@color/neon_purple"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_small"
        android:layout_marginStart="@dimen/spacing_tiny"
        app:layout_constraintBaseline_toBaselineOf="@id/tvFooter"
        app:layout_constraintStart_toEndOf="@id/tvFooter"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
